Actualizar Historia Clínica Abierta